--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "maatify/post-validator-v2",
     "description": "maatify.dev post validator handler, known by our team",
-    "version": "1.1.6",
+    "version": "1.1.7",
     "type": "library",
     "keywords": [
         "PHP",
@@ -54,7 +54,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Maatify\\PostValidator\\": "PostValidator/"
+            "Maatify\\PostValidatorV2\\": "PostValidatorV2/"
         }
     }
 }
