--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "maatify/post-validator-v2",
     "description": "maatify.dev post validator handler, known by our team",
-    "version": "1.3.0014",
+    "version": "5.0.1",
     "type": "library",
     "keywords": [
         "PHP",
@@ -40,18 +40,13 @@
             "role": "IOS Developer"
         }
     ],
-    "config": {
-        "platform": {
-            "php": "8.2.0"
-        }
-    },
     "require": {
-        "php": ">=8.2",
-        "maatify/json": "^1.0",
-        "maatify/functions": "^1.0",
-        "maatify/logger": "^1.0",
-        "daveearley/daves-email-validation-tool": "^1.2",
-        "giggsey/libphonenumber-for-php": "^8.13"
+        "maatify/json": "^5.0",
+        "maatify/functions": "^5.0",
+        "maatify/logger": "^5.0",
+        "giggsey/libphonenumber-for-php": "^8.13",
+        "maatify/daves-email-validation-tool": "^5.0",
+      "ext-curl": "*"
     },
     "autoload": {
         "psr-4": {
@@ -59,4 +54,3 @@
         }
     }
 }
-
